# flatbuffers-examples

./: CMakeLists.txt
schema/: wall_generated.h
src/: dm_UTF_8.txt  main.cpp
